--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "ntest",
+  "name": "nano-mcp-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "nano",
+    "cryptocurrency",
+    "payment",
+    "mcp"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nano-mcp": "^1.2.3"
+    "express": "^4.18.3"
   }
 }
