--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "nano-mcp-demo",
+  "name": "ntest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "nano",
-    "cryptocurrency",
-    "payment",
-    "mcp"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "nano-mcp": "^1.2.3"
   }
 }
